Fix 111332: 4.0 files can't be opened in 3.6, invalid region types